# tailwind

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  justfile  tailwind_reverb.dsp
.claude/projects/-Users-zack-Workspace-dsp-tailwind/memory/: feedback_generated_files.md
.github/workflows/: build.yml
docs/: building.md  faust-codegen.md
docs/impl/: backlog.md  echo-delay.md  presets-ab-plan.md
dsp/: tailwind_reverb.dsp
scripts/: codegen.py  element_dev.sh  element_project.conf.example
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/components/brand/: TopBar.cpp  TopBar.h
src/components/controls/: .gitkeep  FreezeButton.cpp  FreezeButton.h  PowerButton.h  RotaryKnob.cpp  RotaryKnob.h
src/components/graphs/: .gitkeep
src/data/: .gitkeep
src/dsp/: .gitkeep
src/presets/: TailwindPresetManager.cpp  TailwindPresetManager.h
src/ui/: TailwindColors.h  TailwindLookAndFeel.cpp  TailwindLookAndFeel.h
src/utils/: .gitkeep
